# MLOps-Personal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  docker_command.txt  evaluate.dockerfile  train.dockerfile  train_from_template.dockerfile  train_mount.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
sessions/1/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb
sessions/1/corrupted_mnist/: main.py
sessions/session_1/: 5_Inference_and_Validation.ipynb
src/corrupted_mnist/: data.py  evaluate.py  greetings.py  iris_classifier.py  model.py  train.py  train_wandb.py  visualize.py  wandb_load_model.py
tests/: test_data.py  test_model.py
